<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">最酷电影</string>
    <string name="my_nanodegree_apps">纳米学位应用</string>
    <string name="hot_movie">最酷电影</string>
    <string name="stock_eagle">股票雄鹰</string>
    <string name="xzy_reader">XYZ 阅读器</string>
    <string name="most_news">最新闻</string>
    <string name="graduation_project">毕业设计</string>

    <string name="menu_title_setting">设置</string>
    <string name="menu_title_refresh">刷新</string>
    <string name="menu_title_collected">已收藏</string>

    <string name="pref_sort_default">popular</string>
    <string name="pref_sort_title">SORT BY</string>
    <string name="pref_sort_key">Sort Type</string>

    <string name="pref_sync_default">86400</string>
    <string name="pref_sync_title">SYNC INTERVAL</string>
    <string name="pref_sync_key">sync_key</string>

    <string name="movie_collect">收藏</string>
    <string name="movie_colleted">已收藏</string>
    <string name="movie_trailer">预告片</string>
    <string name="movie_reviews">评论</string>


    <string-array name="sort_type">
        <item>热门电影</item>
        <item>高分电影</item>
        <item>收藏电影</item>
    </string-array>

    <string-array name="sort_type_value">
        <item>popular</item>
        <item>top_rated</item>
        <item>已收藏</item>
    </string-array>

    <string-array name="sync_interval">
        <item>1 Hour</item>
        <item>3 Hour</item>
        <item>24 Hour</item>
        <item>72 Hour</item>
    </string-array>

    <string-array name="sync_interval_value">
        <item>3600</item>
        <item>10800</item>
        <item>86400</item>
        <item>259200</item>
    </string-array>
    
    <string name="progress_dialog_message">正在下载</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Settings -->

    <!-- SyncAdapter related -->
    <string name="sync_account_type">myappportfolio.example.com</string>
    <string name="content_authority">com.example.android.myappportfolio.topMovies</string>

    <!-- Notification Format -->
    <string name="format_notification">
            New most popular movie: <xliff:g id="movie">%1$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">
            last_notification
    </string>

    <!-- Strings related to Notification Enabled preference -->
    <string
        name="pref_enable_notifications_key" translatable="false">enable_notifications
    </string>
    <string name="pref_enable_notifications_label">Movie Notifications</string>
    <string name="pref_enable_notifications_true"> Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>




    <!-- Key name for storing server status in SharedPreferences -->
    <string name="pref_server_status_key" translatable="false">server-status</string>



    <!--Empty Movie Database-->
    <string name="empty_movie_list">No Movie Information Avaliable</string>
    <string name="emtry_movie_list_no_network">No movie information available. The network is not available to fetch movie data.</string>
    <string name="empty_movie_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_movie_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of hotmovie.</string>




</resources>
